--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
