--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -19,6 +19,7 @@
 \newcommand{\gB}{\mathcal{B}}
 \newcommand{\gC}{\mathcal{C}}
 \newcommand{\gE}{\mathcal{E}}
+\newcommand{\gI}{\mathcal{I}}
 \newcommand{\gT}{\mathcal{T}}
 \newcommand{\gU}{\mathcal{U}}
 \newcommand{\gY}{\mathcal{Y}}
