--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -232,7 +232,7 @@ recognition in images.
 The sequence criteria mentioned in section~\ref{sec:advantages}, namely
 Connectionist Temporal Classification~\citep{graves2006}, the Automatic
 Segmentation criterion~\citep{collobert2016wav2letter}, and Lattice-free
-Maximum Mutual Information~\citep{povery2016purely} are most commonly used in
+Maximum Mutual Information~\citep{povey2016purely} are most commonly used in
 speech recognition. Section~\ref{sec:extended_examples} shows how to implement
 a subset of these using weighted automata. \citet{hannun2017sequence} gives a
 more detailed introduction to Connectionist Temporal Classification.
