--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -19,9 +19,11 @@
 \newcommand{\gB}{\mathcal{B}}
 \newcommand{\gC}{\mathcal{C}}
 \newcommand{\gE}{\mathcal{E}}
+\newcommand{\gG}{\mathcal{G}}
 \newcommand{\gI}{\mathcal{I}}
 \newcommand{\gT}{\mathcal{T}}
 \newcommand{\gU}{\mathcal{U}}
+\newcommand{\gX}{\mathcal{X}}
 \newcommand{\gY}{\mathcal{Y}}
 \newcommand{\gZ}{\mathcal{Z}}
 
