--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "b504cceb",
    "metadata": {},
    "outputs": [
@@ -52,15 +52,15 @@
    "id": "17ead36f",
    "metadata": {},
    "source": [
-    "## Intersect$\\newcommand{\\vx}{{\\bf x}}\n",
+    "## Intersect\n",
+    "$\\newcommand{\\vx}{{\\bf x}}\n",
     "\\newcommand{\\vy}{{\\bf y}}\n",
     "\\newcommand{\\vz}{{\\bf z}}\n",
     "\\newcommand{\\gA}{\\mathcal{A}}\n",
     "\\newcommand{\\gT}{\\mathcal{T}}\n",
     "\\newcommand{\\gU}{\\mathcal{U}}\n",
     "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
-    "\\renewcommand\\L{\\mathcal{L}}$\n",
-    "The intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
+    "\\renewcommand\\L{\\mathcal{L}}$The intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
     "\n",
     "The analagous operation for transducers is the composition, which we will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
    ]
@@ -721,25 +721,25 @@
     "First, suppose we want to compute the Viterbi score at $v$. The Viterbi score is the maximum of the weights of all three paths terminating at $v$, namely $s_v = \\max \\{w + p_1, w + p_2, w + p_3\\}$. We can also compute the Viterbi score $s_v$ from the Viterbi score, $s_u$, of paths terminating at $u$. In this case $s_v = w + s_u$. This is the recursion we used above but for simplicity with only one incoming arc to $v$. The two ways of computing $s_v$ are equivalent:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "s_v &= w + s_u \\\\ \n",
     "&= w + \\max \\{p_1, p_2, p_3 \\} \\\\\n",
     "&= \\max \\{w + p_1, w + p_2, w + p_3\\} \\\\\n",
     "&= s_v.\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "The same decomposition works for the forward score and the $\\LSE$ operation:\n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "s_v &= w + s_u  \\\\\n",
     "&= w + \\log \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
     "&= \\log e^w + \\log \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
     "&= \\log e^w \\left(e^{p_1} + e^{p_2} + e^{p_3}\\right) \\\\\n",
     "&= \\log \\left(e^{w + p_1} + e^{w + p_2} + e^{w + p_3}\\right) \\\\\n",
     "&= s_v\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "For simplicity, we assume only three paths terminating at $u$ and one arc incoming to $v$. The argument is easily extended to an arbitrary number of paths and arcs.\n",
