--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -32,11 +32,11 @@ is now for the opposite. Most machine-learning applications involve a single,
 monolithic neural network. Both of these extremes have advantages and both have
 disadvantages.
 
-I believe a primary advantage of automata in machine learning is their
-ability to harness the best of both worlds. Automata are capable of retaining
-many if not all of the advantages of a multi-component, hand-engineered system
-as well as those of a monolithic deep neural network. The next few paragraphs
-explain some of these advantages and the regime to which they apply.
+A primary advantage of automata in machine learning is their ability to harness
+the best of both worlds. Automata are capable of retaining many if not all of
+the advantages of a multi-component, hand-engineered system as well as those of
+a monolithic deep neural network. The next few paragraphs explain some of these
+advantages and the regime to which they apply.
 
 \paragraph{Modular:} One of the advantages of multi-component, hand-engineered
 systems over monolithic neural networks is modularity. In traditional software
@@ -236,7 +236,6 @@ Maximum Mutual Information~\citep{povey2016purely} are most commonly used in
 speech recognition. Section~\ref{sec:extended_examples} shows how to implement
 a subset of these using weighted automata. \citet{hannun2017sequence} gives a
 more detailed introduction to Connectionist Temporal Classification.
-
 
 In terms of software, two of the better known libraries for operations on WFSTs
 are OpenFST~\citep{mohri2000design} and its predecessor
