--- a/latex/title.tex
+++ b/latex/title.tex
@@ -1,5 +1,14 @@
 \maketitle
 
 \begin{abstract}
-    Graphs in speech recognition are important.
+    The goal of this work is to introduce the reader to weighted finite-state
+    automata and their application to machine learning. The introduction begins
+    by motivating the use of automata in machine learning. It proceeds with an
+    introduction to acceptors, transducers, and their associated properties.
+    Many of the core operations of weighted automata are then described in
+    detail. The introduction moves closer to the research frontier by
+    explaining automatic differentiation and its use with weighted automata.
+    The last section presents several extended examples to gain deeper
+    familiarity with weighted automata, their operations, and applications to
+    machine-learning.
 \end{abstract}
